--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react-scripts": "5.0.1",
     "redux": "^4.2.0",
     "rxjs": "^7.5.7",
+    "socket.io-client": "^4.5.3",
     "typescript": "^4.6.3",
     "web-vitals": "^2.1.4",
     "yup": "^0.32.11"
